--- a/assets/style/config/_footer.css
+++ b/assets/style/config/_footer.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 456px) {
+@media screen and (max-width: 768px) {
   .first-section-footer {
     background-color: var(--mediumblue);
     display: flex;
@@ -45,8 +45,17 @@
     gap: 25px;
     padding: 25px 0 25px 0;
   }
+  .ul-footer {
+    border-bottom: solid #ccc;
+  }
   .ul-title {
     font-weight: 600;
+  }
+  .ul-footer,
+  .ul-title {
+    cursor: pointer;
+    padding: 0;
+    background-color: transparent;
   }
   .second-section-footer > div {
     display: flex;
@@ -55,9 +64,11 @@
     text-align: center;
     gap: 25px;
   }
-  ul {
-    margin: 0;
-    padding: 0;
+  .ul-footer li:not(.ul-title) {
+    display: none;
+  }
+  .ul-footer.open li {
+    display: block;
   }
   .second-section-footer > div > ul > li {
     list-style: none;
@@ -65,13 +76,6 @@
   .weather-container-footer {
     display: flex;
     align-items: center;
-  }
-
-  .thrid-section-footer {
-    background-color: var(--darkblue);
-    display: flex;
-    text-align: center;
-    color: white;
   }
 
   .top-icon {
@@ -94,7 +98,79 @@
   }
 }
 
-@media screen and (min-width: 456px) {
+@media screen and (min-width: 768px) and (max-width: 1450px) {
+  .second-section-footer {
+    background-color: var(--lmblue);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 25px;
+    gap: 50px;
+  }
+  .link-parent {
+    display: flex;
+    flex-direction: row;
+  }
+  .first-section-footer {
+    background-color: var(--mediumblue);
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    color: white;
+    font-weight: 700;
+  }
+  .title-logo-container {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 15px;
+  }
+  .logo-footer {
+    width: 5%;
+    border-radius: 10px;
+  }
+  .first-section-footer > div {
+    padding: 15px;
+    width: 50%;
+  }
+  .first-section-footer > div > li {
+    list-style: none;
+  }
+  .icon-container-footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 15px;
+  }
+  .icon-container-footer > img {
+    width: 4.5%;
+  }
+  .left-part {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    width: 600px;
+    gap: 20px;
+    margin-right: 0;
+  }
+  .ul-footer {
+    width: 30%;
+    padding-left: 0;
+  }
+  hr {
+    width: 90%;
+    margin-left: 0;
+  }
+}
+
+@media screen and (min-width: 1450px) {
+  .link-parent {
+    display: flex;
+    flex-direction: row;
+  }
   .first-section-footer {
     background-color: var(--mediumblue);
     display: flex;
@@ -136,33 +212,33 @@
     background-color: var(--lmblue);
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
-    gap: 25px;
-    padding: 25px 0 25px 0;
+    justify-content: center;
+    padding: 25px;
+    gap: 50px;
   }
   .ul-title {
     font-weight: 600;
   }
-  .second-section-footer > div {
+
+  .left-part {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: space-around;
-    gap: 25px;
+    width: 600px;
+    gap: 20px;
+    margin-right: 0;
   }
+  .ul-footer {
+    width: 30%;
+    padding-left: 0;
+  }
+
   .second-section-footer > div > ul > li {
     list-style: none;
   }
   .weather-container-footer {
     display: flex;
     align-items: center;
-  }
-
-  .thrid-section-footer {
-    background-color: var(--darkblue);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: white;
   }
 
   .top-icon {
@@ -183,4 +259,14 @@
       transform: translateY(-7.5px); /* Rebond intermédiaire */
     }
   }
+}
+.thrid-section-footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--darkblue);
+  text-align: center;
+  color: white;
+  max-height: 6vw;
+  font-size: clamp(10px, 1.5vw, 20px);
 }
