--- a/assets/style/config/_header.css
+++ b/assets/style/config/_header.css
@@ -1,14 +1,23 @@
-@media screen and (max-width: 456px) {
+@media screen and (max-width: 900px) {
   .nav-header {
     display: none;
+  }
+  .top-part {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
   }
 
   /* Style par défaut du bouton hamburger - caché sur grand écran */
   .hamburger {
-    font-size: 24px;
+    font-size: 12vw;
     cursor: pointer;
     display: none;
     color: #333;
+  }
+  .nav-header-mobil img {
+    width: 14vw;
+    height: auto;
   }
 
   /* Menu visible par défaut */
@@ -33,12 +42,13 @@
     top: 0;
     width: 100%;
     z-index: 1;
-    padding: 10px;
+    padding: 6vw;
   }
 
   /* Style pour les éléments de liste dans le menu mobile */
   .ul-header-mobil > li {
     text-align: left;
+    font-size: clamp(25px, 1.5vw, 28px);
   }
 
   /* Classe 'show' pour afficher le menu lors du clic */
@@ -47,7 +57,7 @@
   }
 }
 
-@media screen and (min-width: 456px) {
+@media screen and (min-width: 900px) {
   .nav-header-mobil {
     display: none;
   }
@@ -55,7 +65,6 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-
     background: rgba(255, 255, 255, 0.25);
     box-shadow: 0 5px 20px 0 rgba(137, 137, 137, 0.496);
     backdrop-filter: blur(4px);
@@ -67,14 +76,15 @@
     margin: 0;
   }
   .ul-header {
+    width: 100%;
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: flex-start;
-    gap: 20px;
+    justify-content: space-around;
   }
   .ul-header > li {
     list-style: none;
+    font-size: clamp(18px, 1.5vw, 25px);
   }
 
   a {
