--- a/assets/style/config/_weather.css
+++ b/assets/style/config/_weather.css
@@ -1,82 +1,175 @@
-.widget {
-  width: 440px;
-  padding: 10px;
-  border-radius: 5px;
+@media screen and (max-width: 768px) {
+  .current_date {
+    background: rgba(255, 255, 255, 0.25);
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-radius: 0;
+    padding: 5px;
+  }
 
-  list-style: none;
-  gap: 15px;
-  flex-direction: column;
-  display: flex;
+  .temperature {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 2vw;
+    width: 100%;
+    font-size: 16px;
+    font-weight: 700;
+    border-radius: 0;
+    padding: 5px;
+  }
+
+  .current_weather {
+    width: 30px;
+    height: auto;
+  }
+
+  .prevision_container_data {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-weight: 700;
+  }
+
+  .prevision_data {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .prevision_data > div {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: space-between;
+    border-bottom: 1px solid black;
+  }
+
+  .prevision_data img {
+    height: 4vw;
+    width: auto;
+  }
+
+  .prevision_data p {
+    line-height: 1;
+    margin: 10px;
+    width: 70px;
+  }
+
+  .weather_container {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+
+  .previsions {
+    background: rgba(255, 255, 255, 0.25);
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
+    padding: 10px;
+  }
 }
 
-.weather_hr {
-  width: 100%;
-}
+@media screen and (min-width: 768px) {
+  .widget {
+    width: 760px;
+    padding: 10px;
+    border-radius: 5px;
+    list-style: none;
+  }
 
-.current_date {
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-}
-.current_date > div {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-gap: 20px;
+  .current_date {
+    display: flex;
+    flex-direction: row;
+    width: 30%;
+    background: rgba(255, 255, 255, 0.25);
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
+    border-radius: 10px;
+  }
 
-  align-items: center;
-}
-.current_weather {
-  width: 15rem;
-}
+  .current_date > div {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+  }
 
-.temperature {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  gap: 10px;
-  width: 100%;
-  align-items: center;
-  font-size: 20px;
-  font-weight: 700;
-  background: rgba(255, 255, 255, 0.25);
-  backdrop-filter: blur(4px);
-  -webkit-backdrop-filter: blur(4px);
-  border-radius: 10px;
-}
-.temperature > div {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  gap: 15px;
-}
+  .current_weather {
+    width: 4rem;
+  }
 
-.prevision {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  gap: 25px;
-  font-weight: 700;
-  background: rgba(255, 255, 255, 0.25);
-  backdrop-filter: blur(4px);
-  -webkit-backdrop-filter: blur(4px);
-  border-radius: 10px;
-}
-.prevision_container_data {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
-  gap: 30px;
-  font-weight: 700;
-}
-.prevision_data {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  gap: 20px;
-  font-weight: 700;
-}
-.prevision_data > div {
-  display: flex;
-  flex-direction: row;
+  .temperature {
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    gap: 10px;
+    width: 100%;
+    font-size: 17px;
+    font-weight: 700;
+    border-radius: 10px;
+    padding-left: 10px;
+  }
+
+  .temperature > div {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 15px;
+  }
+
+  .temperature p {
+    line-height: 1;
+    margin: 10px;
+  }
+
+  .prevision_container_data {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    font-weight: 700;
+    border-bottom: 1px solid black;
+  }
+
+  .prevision_data {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .prevision_data > div {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .prevision_data img {
+    height: 26px;
+    width: auto;
+  }
+
+  .prevision_data p {
+    line-height: 1;
+    margin: 10px;
+    width: 70px;
+  }
+
+  .weather_container {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+  }
+
+  .previsions {
+    width: 65%;
+    border-radius: 10px;
+    background: rgba(255, 255, 255, 0.25);
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
+    padding: 10px;
+  }
 }
