--- a/assets/style/user/ressource.css
+++ b/assets/style/user/ressource.css
@@ -1,36 +1,4 @@
 @media screen and (max-width: 456px) {
-  .hero-page {
-    background-image: url(../../img/category_home/ressources.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 100vh;
-  }
-
-  .title-page {
-    position: relative; /* Permet de positionner les éléments enfants relativement */
-    width: 100%; /* Vous pouvez ajuster la largeur selon vos besoins */
-  }
-
-  .text-overlay {
-    position: absolute; /* Positionnement absolu pour superposer le texte */
-    top: 50%; /* Centrer verticalement */
-    left: 50%; /* Centrer horizontalement */
-    transform: translate(-50%, -50%); /* Ajustement pour le centrer parfaitement */
-    text-align: center; /* Centrer le texte */
-    padding: 25px;
-    color: white;
-    font-weight: 700;
-  }
-
-  /* ----------------------- */
-
-  .ressources-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    gap: 25px;
-  }
-
   .card_ressources {
     border: solid lightgray 1px;
     padding: 10px;
@@ -72,87 +40,104 @@
   }
 }
 
-@media screen and (min-width: 456px) {
-  .hero-page {
-    background-image: url(../../img/category_home/ressources.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 100vh;
-  }
+/*//////////////////////////////////////////Styles Globales////////////////////////////////////////////////////////////////////////*/
 
-  .title-page {
-    position: relative; /* Permet de positionner les éléments enfants relativement */
-    width: 100%; /* Vous pouvez ajuster la largeur selon vos besoins */
-  }
+.hero-page {
+  background-image: url(../../img/category_home/ressources.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
+}
 
-  .text-overlay {
-    position: absolute; /* Positionnement absolu pour superposer le texte */
-    top: 50%; /* Centrer verticalement */
-    left: 50%; /* Centrer horizontalement */
-    transform: translate(-50%, -50%); /* Ajustement pour le centrer parfaitement */
-    text-align: center; /* Centrer le texte */
-    padding: 25px;
+.title-page {
+  position: relative; /* Permet de positionner les éléments enfants relativement */
+  width: 100%; /* Vous pouvez ajuster la largeur selon vos besoins */
+}
 
-    background: rgba(255, 255, 255, 0.25);
-    box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.496);
-    backdrop-filter: blur(25px);
-    -webkit-backdrop-filter: blur(4px);
-    border: 1px solid rgba(255, 255, 255, 0.18);
-    border-radius: 10px;
-  }
+.text-overlay {
+  position: absolute; /* Positionnement absolu pour superposer le texte */
+  top: 50%; /* Centrer verticalement */
+  left: 50%; /* Centrer horizontalement */
+  transform: translate(
+    -50%,
+    -50%
+  ); /* Ajustement pour le centrer parfaitement */
+  text-align: center; /* Centrer le texte */
+  background: rgba(255, 255, 255, 0.25);
+  box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.496);
+  backdrop-filter: blur(25px);
+  -webkit-backdrop-filter: blur(4px);
+  border: 1px solid rgba(255, 255, 255, 0.18);
+  border-radius: 10px;
+  color: white;
+  font-weight: 700;
+  /* width: clamp(400px, 1.5vw, 600px) !important; */
+  width: 65vw;
+  max-width: 800px !important;
+  max-height: 70vh;
+}
 
-  /* ----------------------- */
+h1 {
+  text-align: center;
+  font-size: clamp(16px, 3.5vw, 30px) !important;
+  margin: 1vw;
+}
 
-  .ressources-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    gap: 15px;
-    margin: 20px;
-  }
+.text-overlay p {
+  text-align: center;
+  font-size: clamp(16px, 2.5vw, 24px) !important;
+}
 
-  .card_ressources {
-    border: solid lightgray 1px;
-    padding: 10px;
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-    justify-content: center;
-    text-align: center;
-    height: 25rem;
-    border-radius: 10px;
-    background-color: white;
-    transition: all ease-in-out 0.3s;
-  }
+.ressources-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)) !important;
+  justify-content: center;
+  align-items: center;
+  gap: 25px;
+  padding: 5vw;
+}
 
-  .pic-ressources {
-    border-radius: 40% 20% / 30% 10%;
-    width: 200px;
-    border: 1px black solid;
-  }
+/* ----------------------- */
 
-  .card_ressources:hover {
-    box-shadow: lightgray 0 5px 15px 0;
-    background-color: #f8f8f8;
-    transform: scale(1.05);
-  }
+.card_ressources {
+  border: solid lightgray 1px;
+  padding: 5px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  width: 300px;
+  min-height: 420px !important;
+  height: auto;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  border-radius: 10px;
+  background-color: white;
+}
 
-  .name_ressources > p {
-    font-size: 17px;
-    font-style: italic;
-  }
+.pic-ressources {
+  border-radius: 40% 20% / 30% 10%;
+  width: 200px;
+  border: 1px black solid;
+}
 
-  .type_ressources > p {
-    font-size: 15px;
-  }
+.name_ressources > p {
+  font-size: 17px;
+  font-style: italic;
+}
 
-  .btn-details {
-    background-color: var(--lmblue);
-    border: none;
-    border-radius: 10px;
-    padding: 10px;
-    transition: all ease-in-out 0.2s;
-  }
-  .btn-details:hover {
-    background-color: var(--mediumblue);
-  }
+.type_ressources > p {
+  font-size: 15px;
+}
+
+.btn-details {
+  background-color: var(--lmblue);
+  border: none;
+  border-radius: 10px;
+  padding: 10px;
+  transition: all ease-in-out 0.2s;
+}
+.btn-details:hover {
+  background-color: var(--mediumblue);
 }
