--- a/assets/style/user/campsite.css
+++ b/assets/style/user/campsite.css
@@ -8,44 +8,41 @@
 .title-page {
   position: relative; /* Permet de positionner les éléments enfants relativement */
   width: 100%; /* Vous pouvez ajuster la largeur selon vos besoins */
+  font-size: clamp(20px, 4vw, 32px);
 }
 
-@media screen and (max-width: 456px) {
-  .text-overlay {
-    position: absolute; /* Positionnement absolu pour superposer le texte */
-    top: 50%; /* Centrer verticalement */
-    left: 50%; /* Centrer horizontalement */
-    transform: translate(-50%, -50%); /* Ajustement pour le centrer parfaitement */
-    text-align: center; /* Centrer le texte */
-    padding: 25px;
-    color: white;
-    font-weight: 700;
-  }
+.text-overlay > p {
+  font-size: clamp(16px, 1.8vw, 26px) !important;
 }
 
-@media screen and (min-width: 456px) {
-  .text-overlay {
-    position: absolute; /* Positionnement absolu pour superposer le texte */
-    top: 50%; /* Centrer verticalement */
-    left: 50%; /* Centrer horizontalement */
-    transform: translate(-50%, -50%); /* Ajustement pour le centrer parfaitement */
-    text-align: center; /* Centrer le texte */
-    padding: 25px;
-
-    background: rgba(255, 255, 255, 0.25);
-    box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.496);
-    backdrop-filter: blur(25px);
-    -webkit-backdrop-filter: blur(4px);
-    border: 1px solid rgba(255, 255, 255, 0.18);
-    border-radius: 10px;
-  }
+.text-overlay {
+  position: absolute; /* Positionnement absolu pour superposer le texte */
+  top: 50%; /* Centrer verticalement */
+  left: 50%; /* Centrer horizontalement */
+  transform: translate(
+    -50%,
+    -50%
+  ); /* Ajustement pour le centrer parfaitement */
+  text-align: center; /* Centrer le texte */
+  padding: 25px;
+  background: rgba(255, 255, 255, 0.25);
+  box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.496);
+  backdrop-filter: blur(25px);
+  -webkit-backdrop-filter: blur(4px);
+  border: 1px solid rgba(255, 255, 255, 0.18);
+  border-radius: 10px;
+  font-weight: 700;
+  color: rgb(14, 84, 145);
+  width: 60vw;
+  max-width: 800px !important;
+  max-height: 90vh;
 }
 
 /* ---------- */
 .camping-grid {
   margin: 25px;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(330px, 1fr));
   gap: 20px;
 }
 
@@ -61,7 +58,8 @@
 .pic-campiste {
   width: 100%;
   height: 200px;
-  margin-bottom: 10px;
+  object-fit: cover;
+  border-radius: 10px;
 }
 
 .campsite-name {
