--- a/assets/style/user/coves.css
+++ b/assets/style/user/coves.css
@@ -9,7 +9,7 @@
     grid-template-columns: 1fr !important;
     margin: 0 auto;
     gap: 20px;
-    width: 80%;
+    width: 90%;
   }
 
   .coves-description {
@@ -119,8 +119,8 @@
     -50%
   ); /* Ajustement pour le centrer parfaitement */
   text-align: center; /* Centrer le texte */
-  padding: 25px;
-  background: rgba(255, 255, 255, 0.25);
+  padding: 15px;
+  background: rgba(83, 72, 72, 0.25);
   box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.496);
   backdrop-filter: blur(25px);
   -webkit-backdrop-filter: blur(4px);
@@ -131,11 +131,12 @@
   /* width: clamp(400px, 1.5vw, 600px) !important; */
   width: 60vw;
   max-width: 800px !important;
+  max-height: 80vh;
 }
 
 h1 {
   text-align: center;
-  font-size: clamp(20px, 7vw, 50px) !important;
+  font-size: clamp(16px, 7vw, 30px) !important;
 }
 
 [id^="calanque-"] {
@@ -144,7 +145,7 @@ h1 {
 
 .text-overlay p {
   text-align: center;
-  font-size: clamp(20px, 3.5vw, 30px) !important;
+  font-size: clamp(16px, 2vw, 25px) !important;
 }
 
 /* -------------------------------------------------------------------Navigation------------------------------------------------------------------------- */
@@ -198,7 +199,7 @@ main > nav > li:hover {
 main > section > h2,
 main > h2 {
   text-align: center;
-  font-size: clamp(10px, 8vw, 55px);
+  font-size: clamp(14px, 5vw, 30px);
   max-width: 80%;
   margin: 5vw auto;
 }
@@ -206,12 +207,12 @@ main > h2 {
 main > section > p {
   font-size: clamp(15px, 6vw, 25px);
   margin: 2vw auto;
-  max-width: clamp(100px, 80vw, 1200px) !important;
+  max-width: clamp(320px, 80vw, 1200px) !important;
 }
 section > li > p {
   text-align: justify;
   font-size: clamp(15px, 6vw, 20px);
-  margin: 2vw;
+  margin: 2vw auto;
 }
 
 .first-part {
@@ -219,7 +220,7 @@ section > li > p {
   grid-template-columns: 2fr 1fr;
   margin: 8vw auto;
   gap: 4vw;
-  max-width: clamp(300px, 90vw, 1200px) !important;
+  max-width: clamp(320px, 90vw, 1200px) !important;
 }
 
 main > section > section > li {
@@ -241,7 +242,7 @@ main > section > section > li:hover {
   grid-template-columns: 1fr !important;
   margin: 8vw auto;
   gap: 3vw;
-  max-width: clamp(300px, 90vw, 1200px) !important;
+  max-width: clamp(320px, 90vw, 1200px) !important;
 }
 
 /* -------------------------------------------------------------------Liste des Calanques------------------------------------------------------------------- */
