--- a/assets/style/user/home.css
+++ b/assets/style/user/home.css
@@ -73,16 +73,16 @@
 
 h1 {
   text-align: center;
-  font-size: clamp(20px, 7vw, 50px) !important;
+  font-size: clamp(16px, 5vw, 32px) !important;
 }
 
 h2 {
   text-align: center;
-  font-size: 4vw;
+  font-size: clamp(16px, 5vw, 25px) !important;
 }
 
 .text-overlay {
-  width: 50vw !important;
+  width: 50vw;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -96,6 +96,7 @@ h2 {
   -webkit-backdrop-filter: blur(4px);
   border: 1px solid rgba(255, 255, 255, 0.18);
   border-radius: 10px;
+  max-height: 90vh;
 }
 
 .presentation {
