--- a/assets/style/user/map.css
+++ b/assets/style/user/map.css
@@ -22,7 +22,7 @@
     box-shadow: lightgray 0 5px 10px 0;
   }
   .map-container {
-    margin: 0px 100px 100px 100px;
+    margin: 0px 50px 100px 50px;
   }
   .description-page {
     display: flex;
@@ -30,4 +30,15 @@
     align-items: center;
     margin-bottom: 20px;
   }
+}
+
+.title {
+  font-size: clamp(16px, 6vw, 32px) !important;
+  margin: 4vw auto;
+}
+
+.description-page > p {
+  font-size: clamp(14px, 4vw, 26px);
+  text-align: center;
+  padding: 2vw;
 }
